--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,3 +2,18 @@
   background-color: rgb(255, 192, 203);
   font-family: Verdana, DejaVu Sans, sans-serif;
 }
+
+#second {
+  color: #0092ff;
+  font-size: 36px;
+}
+
+.third {
+  font-size: 24px;
+}
+
+#fourth {
+  background-color: rgb(200, 250, 200);
+  font-size: 24px;
+  font-weight: bold;
+}
