--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -23,12 +23,13 @@
   font-weight: bold;
 }
 
-.child {
-  color: red;
-  font-size: 14px;
-}
 
 div.text {
   color: green;
   font-size: 22px;
+}
+
+div.text.child {
+  color: red;
+  font-size: 14px;
 }
