--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
 }
 
 .logo {
@@ -14,6 +18,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  padding: 10px;
+  gap: 10px;
+
 }
 
 a {
@@ -22,4 +30,15 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+}
+
+
+.left-links {
+  /* justify-content: space-around; */
+  /* margin-right: auto; */
+}
+
+.right-links {
+  /* justify-content: space-around; */
+  /* margin-left: auto; */
 }
