--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -4,7 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 80px;
+  padding: 8px;
 }
 
 .logo {
@@ -19,7 +19,8 @@ ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
   display: flex;
-  padding: 10px;
+  padding: 0px;
+  margin: 0px;
   gap: 10px;
 
 }
